--- a/datastructures_algorithms/data_structures_and_algorithms.ipynb
+++ b/datastructures_algorithms/data_structures_and_algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d5612ff7",
+   "id": "6312b068",
    "metadata": {},
    "source": [
     "# Data Structures and Algorithms"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25dc9533",
+   "id": "3104791e",
    "metadata": {},
    "source": [
     "# Arrays e linked lists"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9b38f5",
+   "id": "68d0d737",
    "metadata": {},
    "source": [
     "Arrays e linked lists são duas estruturas de dados amplamente utilizadas na programação. Ambas têm características distintas e são adequadas para diferentes situações. Aqui está uma explicação sobre cada uma delas, suas características, principais diferenças, vantagens e desvantagens:\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0d516f",
+   "id": "c434f721",
    "metadata": {},
    "source": [
     "# Heaps, stacks e queues  (pendente o heap)"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5267a8a3",
+   "id": "7802a503",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T11:27:38.935157Z",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2eb6421d",
+   "id": "ce8e4c72",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T11:28:05.397595Z",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200a502e",
+   "id": "62917bd8",
    "metadata": {},
    "source": [
     "**Ordenação por Seleção**: A ordenação por seleção encontra o menor elemento em uma lista e o coloca na posição correta, repetindo esse processo até que a lista esteja ordenada."
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b4993e0d",
+   "id": "5ababc35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T11:33:31.803915Z",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "483364b4",
+   "id": "c94fafc3",
    "metadata": {},
    "source": [
     "A função ordenacao_selecao recebe uma lista como argumento. Essa função implementa o algoritmo de ordenação por seleção.\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4041021",
+   "id": "1a224f69",
    "metadata": {},
    "source": [
     "**Pilha** (Stacks): Uma pilha é uma estrutura de dados em que o último elemento adicionado é o primeiro a ser removido (LIFO - Last In, First Out)."
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e582602a",
+   "id": "14895dc7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T11:39:32.634171Z",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0a55168",
+   "id": "1de4df1f",
    "metadata": {},
    "source": [
     "**Fila** (Queue): Uma fila é uma estrutura de dados em que o primeiro elemento adicionado é o primeiro a ser removido (FIFO - First In, First Out)."
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "47a27cfa",
+   "id": "bbae7d58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T11:41:30.202143Z",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9162fd2f",
+   "id": "0afd5020",
    "metadata": {},
    "source": [
     "**Heap**: É uma estrutura de dados chamada \"heap binário\" ou \"fila de prioridade\". É uma árvore binária especial em que o valor em cada nó é maior ou igual ao valor em seus nós filhos (no caso de um heap máximo) ou menor ou igual (no caso de um heap mínimo). A propriedade de ordenação em um heap permite que seja usado eficientemente para implementar algoritmos de fila de prioridade, onde os elementos com maior (ou menor) prioridade são acessados primeiro.\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "040f97fb",
+   "id": "1b78b5a1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T13:40:34.882559Z",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9a69bc7d",
+   "id": "e6001063",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T13:59:11.298828Z",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "622656f9",
+   "id": "404a21c0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T13:55:03.616639Z",
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5c45ccb2",
+   "id": "7f89338d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T13:58:09.666817Z",
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "350d36a9",
+   "id": "ae417297",
    "metadata": {},
    "source": [
     "Neste exemplo, importamos o módulo heapq. Em seguida, criamos um heap mínimo vazio chamado heap. Usamos a função heappush para adicionar elementos ao heap. Cada vez que um elemento é adicionado, a propriedade de ordenação do heap é mantida. Por fim, usamos a função heappop para remover e retornar o elemento de menor valor do heap.\n",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8173541c",
+   "id": "28cdd56a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-03T13:42:51.597458Z",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "090cedba",
+   "id": "320a2b2d",
    "metadata": {},
    "source": [
     "Neste exemplo, criamos funções para heapify (transformar uma lista em um heap) e heappop (remover e retornar o elemento de menor valor do heap). Também criamos a função heappush para adicionar elementos ao heap.\n",
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5185908",
+   "id": "b7b0afca",
    "metadata": {},
    "source": [
     "Heaps têm várias aplicações úteis em ciência da computação e algoritmos. Algumas das principais aplicações de heaps incluem:\n",
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcfb7316",
+   "id": "0d2626ee",
    "metadata": {},
    "source": [
     "# Hash Tables"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6311bac6",
+   "id": "04fea068",
    "metadata": {},
    "source": [
     "Uma Hash Table, também conhecida como tabela hash, é uma estrutura de dados que mapeia chaves para valores por meio de uma função hash. Ela é projetada para fornecer acesso rápido e eficiente aos elementos armazenados, permitindo a inserção, recuperação e remoção de elementos em tempo constante em média.\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f5a0fb3",
+   "id": "5e69700e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-05T21:45:42.594063Z",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46492a52",
+   "id": "b2be5b89",
    "metadata": {},
    "source": [
     "Neste exemplo, utilizamos o dicionário em Python para criar uma Hash Table. Os elementos são inseridos no dicionário associando uma chave a um valor. Através da chave, é possível recuperar o valor correspondente. A atualização de um valor é feita atribuindo um novo valor à chave existente. A remoção de um elemento é feita usando a palavra-chave `del`."
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d041d4d",
+   "id": "cbbd4b12",
    "metadata": {},
    "source": [
     "# Binary Search Trees"
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c423f00",
+   "id": "c97350be",
    "metadata": {},
    "source": [
     "Binary Search Tree (BST), ou Árvore de Busca Binária, é uma estrutura de dados que organiza seus elementos de forma hierárquica, onde cada nó possui um valor e dois nós filhos: um nó à esquerda e um nó à direita. A propriedade fundamental de uma BST é que o valor de cada nó à esquerda é menor do que o valor do nó pai, e o valor de cada nó à direita é maior do que o valor do nó pai.\n",
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca670913",
+   "id": "a7d6f656",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-05T22:11:03.691458Z",
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92024e38",
+   "id": "51a2ef0d",
    "metadata": {},
    "source": [
     "Neste exemplo, primeiro definimos a classe Node que representa cada nó da árvore, contendo um valor e referências para os nós esquerdo e direito. Em seguida, temos a classe BinarySearchTree que representa a árvore binária de busca em si, com métodos para inserção (insert) e busca (search).\n",
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "90c070e5",
+   "id": "bba47d58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-05T22:18:43.317891Z",
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c3ebedff",
+   "id": "7eaac354",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-05T22:30:53.684705Z",
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab64df7",
+   "id": "7ac181b1",
    "metadata": {},
    "source": [
     "No exemplo de uso, criamos uma instância de BinarySearchTree chamada bst. Em seguida, inserimos os valores 10, 5, 15, 2 e 7 na árvore usando o método insert. Por fim, realizamos uma busca pelos valores 7 e 20 usando o método search e exibimos o resultado. O valor 7 é encontrado na árvore e um objeto ``Node`` correspondente é retornado, enquanto o valor 20 não é encontrado e o valor retornado é ``None``.\n",
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4ed142",
+   "id": "a5095c3d",
    "metadata": {},
    "source": [
     "Em termos de árvores binárias de busca (Binary Search Trees - BST), os conceitos de balanced (equilibrada) e unbalanced (desequilibrada) referem-se à distribuição dos nós na árvore e ao grau de desigualdade na altura dos ramos.\n",
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77543d40",
+   "id": "1fe198be",
    "metadata": {},
    "source": [
     "**Traversing (ou percorrer)** uma árvore refere-se ao ato de visitar todos os nós da árvore em uma determinada ordem. É uma operação comum e fundamental em estruturas de dados baseadas em árvores, permitindo acessar, processar ou exibir os elementos da árvore de maneira sistemática.\n",
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c23c2509",
+   "id": "fdee6096",
    "metadata": {},
    "source": [
     "# Recursion"
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4004fb1",
+   "id": "5f24e756",
    "metadata": {},
    "source": [
     "Recursion (recursão) é um conceito em programação em que uma função chama a si mesma durante sua execução. Em outras palavras, é a prática de resolver problemas dividindo-os em casos menores e resolvendo cada caso menor usando a mesma função recursiva.\n",
@@ -898,16 +898,8 @@
     "\n",
     "A recursão pode ser uma técnica poderosa para resolver problemas complexos, permitindo uma solução elegante e concisa. No entanto, é importante definir casos base corretos para evitar a recursão infinita, bem como considerar a eficiência e o consumo de recursos ao usar a recursão em problemas grandes.\n",
     "\n",
-    "Aqui está um exemplo clássico de função recursiva que calcula o fatorial de um número:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72ac576d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Aqui está um exemplo clássico de função recursiva que calcula o fatorial de um número:\n",
+    "\n",
     "```python\n",
     "def factorial(n):\n",
     "    if n == 0:\n",
@@ -934,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d7136c7",
+   "id": "7d020dd8",
    "metadata": {},
    "source": [
     "# Sorting Algorithms"
